[workspace]
members = ["jsm-macros"]
resolver = "2"

[workspace.dependencies]
jsm-macros = { path = "jsm-macros" }

[package]
name = "jsm"
description = "Jay's stupid module"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/JayJeyaruban/jsm"
homepage = "https://github.com/JayJeyaruban/jsm"
readme = "README.md"
license = "MIT"

[dependencies]
jsm-macros = { workspace = true, optional = true }

[features]
default = ["iter", "label", "pipe"]
iter = []
label = []
pipe = []
macros = ["dep:jsm-macros"]
